--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.5.0",
     "contentful": "^7.14.5",
+    "dateformat": "^3.0.3",
     "dotenv": "^8.2.0",
     "marked": "^1.1.1",
     "node-sass": "^4.14.1",
