--- a/public/manifest.json
+++ b/public/manifest.json
@@ -16,5 +16,5 @@
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#f59c22",
-  "background_color": "#ffffff"
+  "background_color": "#333"
 }
