--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.2.2",
     "react-dom": "^16.13.1",
+    "react-images": "^1.1.7",
     "react-masonry-css": "^1.0.14",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
