--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
     "react-image-fade-in": "^1.1.3",
     "react-images": "^1.1.7",
     "react-masonry-css": "^1.0.14",
