--- a/package.json
+++ b/package.json
@@ -3,26 +3,25 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@craco/craco": "^5.6.4",
-    "bootstrap": "^4.5.2",
-    "contentful": "^7.14.6",
-    "dateformat": "^3.0.3",
+    "@contentful/rich-text-react-renderer": "^14.1.2",
+    "@craco/craco": "^5.8.0",
+    "bootstrap": "^4.5.3",
+    "contentful": "^7.15.0",
+    "date-fns": "^2.16.1",
     "dotenv": "^8.2.0",
-    "marked": "^1.1.1",
-    "node-sass": "^4.14.1",
-    "react": "^16.13.1",
-    "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1",
+    "marked": "^1.2.5",
+    "react": "^17.0.1",
+    "react-bootstrap": "^1.4.0",
+    "react-dom": "^17.0.1",
     "react-icons": "^3.11.0",
-    "react-image-fade-in": "^1.1.3",
     "react-images": "^1.1.7",
     "react-masonry-css": "^1.0.14",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "swr": "^0.3.1",
-    "typeface-fira-sans": "^0.0.75",
-    "typescript": "^4.0.2"
+    "react-scripts": "4.0.1",
+    "sass": "1.29.0",
+    "swr": "^0.3.9",
+    "typeface-fira-sans": "^1.1.13",
+    "typescript": "^4.1.2",
+    "wouter": "2.6.0"
   },
   "scripts": {
     "start": "craco start",
@@ -46,6 +45,15 @@
     ]
   },
   "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.3.0"
+    "@contentful/rich-text-types": "^14.1.2",
+    "@fullhuman/postcss-purgecss": "^3.0.0",
+    "@types/marked": "^1.2.0",
+    "@types/react": "17.0.0",
+    "@types/react-dom": "17.0.0",
+    "@types/wouter": "^2.2.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
+    "eslint": "^7.14.0",
+    "eslint-webpack-plugin": "^2.4.0"
   }
 }
