--- a/package.json
+++ b/package.json
@@ -3,31 +3,27 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^14.1.2",
-    "@craco/craco": "^5.8.0",
-    "bootstrap": "^4.5.3",
-    "contentful": "^7.15.0",
-    "date-fns": "^2.16.1",
-    "dotenv": "^8.2.0",
-    "marked": "^1.2.5",
-    "react": "^17.0.1",
-    "react-bootstrap": "^1.4.0",
-    "react-dom": "^17.0.1",
-    "react-icons": "^3.11.0",
+    "@contentful/rich-text-react-renderer": "^15.2.0",
+    "bootstrap": "^5.1.0",
+    "contentful": "^8.4.2",
+    "date-fns": "^2.23.0",
+    "marked": "^3.0.0",
+    "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
     "react-images": "^1.1.7",
-    "react-masonry-css": "^1.0.14",
-    "react-scripts": "4.0.1",
-    "sass": "1.29.0",
-    "swr": "^0.3.9",
+    "react-masonry-css": "^1.0.16",
+    "sass": "1.38.0",
+    "swr": "^0.5.6",
     "typeface-fira-sans": "^1.1.13",
-    "typescript": "^4.1.2",
-    "wouter": "2.6.0"
+    "typeface-roboto-slab": "^1.1.13",
+    "wouter": "2.7.4"
   },
   "scripts": {
-    "start": "craco start",
-    "build": "craco build",
-    "test": "craco test",
-    "eject": "react-scripts eject"
+    "start": "vite",
+    "build": "vite build",
+    "dev": "vite"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -45,15 +41,16 @@
     ]
   },
   "devDependencies": {
-    "@contentful/rich-text-types": "^14.1.2",
-    "@fullhuman/postcss-purgecss": "^3.0.0",
-    "@types/marked": "^1.2.0",
-    "@types/react": "17.0.0",
-    "@types/react-dom": "17.0.0",
-    "@types/wouter": "^2.2.0",
-    "@typescript-eslint/eslint-plugin": "^4.8.2",
-    "@typescript-eslint/parser": "^4.8.2",
-    "eslint": "^7.14.0",
-    "eslint-webpack-plugin": "^2.4.0"
+    "@contentful/rich-text-types": "^15.1.0",
+    "@types/marked": "^2.0.4",
+    "@types/react": "^17.0.18",
+    "@types/react-dom": "^17.0.9",
+    "@typescript-eslint/eslint-plugin": "^4.29.2",
+    "@typescript-eslint/parser": "^4.29.2",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "eslint": "^7.32.0",
+    "typescript": "^4.3.5",
+    "vite": "^2.5.0",
+    "vite-react-jsx": "^1.1.2"
   }
 }
