--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
+.eslintcache
 
 npm-debug.log*
 yarn-debug.log*
@@ -28,3 +29,9 @@ yarn-error.log*
 # editors
 .vscode
 .vim
+
+# rescript
+*.bs.js
+.merlin
+/lib
+.bsb.lock
