--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "private": true,
   "dependencies": {
     "@contentful/rich-text-react-renderer": "^15.2.0",
+    "@rescript/react": "^0.10.3",
+    "@ryyppy/rescript-promise": "^2.1.0",
     "bootstrap": "^5.1.0",
     "contentful": "^8.4.2",
-    "date-fns": "^2.23.0",
     "marked": "^3.0.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
@@ -14,19 +15,17 @@
     "react-icons": "^4.2.0",
     "react-images": "^1.1.7",
     "react-masonry-css": "^1.0.16",
+    "reason-date-fns": "^1.0.2",
     "sass": "1.38.0",
     "swr": "^0.5.6",
     "typeface-fira-sans": "^1.1.13",
-    "typeface-roboto-slab": "^1.1.13",
-    "wouter": "2.7.4"
+    "typeface-roboto-slab": "^1.1.13"
   },
   "scripts": {
-    "start": "vite",
     "build": "vite build",
-    "dev": "vite"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "dev": "vite",
+    "re:build": "rescript",
+    "re:dev": "rescript build -w"
   },
   "browserslist": {
     "production": [
@@ -41,14 +40,8 @@
     ]
   },
   "devDependencies": {
-    "@contentful/rich-text-types": "^15.1.0",
-    "@types/marked": "^2.0.4",
-    "@types/react": "^17.0.18",
-    "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.29.2",
-    "@typescript-eslint/parser": "^4.29.2",
     "@vitejs/plugin-react-refresh": "^1.3.6",
-    "eslint": "^7.32.0",
+    "rescript": "^9.1.4",
     "typescript": "^4.3.5",
     "vite": "^2.5.0",
     "vite-react-jsx": "^1.1.2"
