fixed swr implementation

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -19,6 +19,7 @@
   "bs-dependencies": [
     "@rescript/react",
     "@ryyppy/rescript-promise",
-    "reason-date-fns"
+    "reason-date-fns",
+    "rescript-swr"
   ]
 }
