--- a/package.json
+++ b/package.json
@@ -1,25 +1,24 @@
 {
   "name": "rbds-preview",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.2.0",
+    "@contentful/rich-text-react-renderer": "^15.6.2",
     "@rescript/react": "^0.10.3",
-    "rescript-swr": "^0.1.0",
     "@ryyppy/rescript-promise": "^2.1.0",
-    "bootstrap": "^5.1.0",
-    "contentful": "^8.4.2",
-    "date-fns": "^2.23.0",
-    "marked": "^3.0.0",
+    "bootstrap": "^5.1.3",
+    "contentful": "^9.1.4",
+    "date-fns": "^2.26.0",
+    "marked": "^4.0.5",
     "react": "^17.0.2",
-    "react-bootstrap": "^1.6.1",
+    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
-    "react-icons": "^4.2.0",
-    "react-images": "^1.1.7",
+    "react-icons": "^4.3.1",
     "react-masonry-css": "^1.0.16",
     "reason-date-fns": "^1.0.2",
-    "sass": "1.38.0",
-    "swr": "^0.5.6",
+    "rescript-swr": "^1.1.0",
+    "sass": "1.43.5",
+    "swr": "^1.0.1",
     "typeface-fira-sans": "^1.1.13",
     "typeface-roboto-slab": "^1.1.13"
   },
@@ -29,7 +28,8 @@
     "build": "rescript build && vite build",
     "re:build": "rescript",
     "re:dev": "rescript build -w",
-    "re:clean": "rescript clean"
+    "re:clean": "rescript clean",
+    "dev": "concurrently \"npm:*:dev\""
   },
   "browserslist": {
     "production": [
@@ -45,9 +45,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "concurrently": "^6.4.0",
     "rescript": "^9.1.4",
-    "typescript": "^4.3.5",
-    "vite": "^2.5.0",
+    "typescript": "^4.5.2",
+    "vite": "^2.6.14",
     "vite-react-jsx": "^1.1.2"
   }
 }
