--- a/package.json
+++ b/package.json
@@ -6,16 +6,15 @@
     "@contentful/rich-text-react-renderer": "^15.6.2",
     "@rescript/react": "^0.10.3",
     "@ryyppy/rescript-promise": "^2.1.0",
-    "bootstrap": "^5.1.3",
     "contentful": "^9.1.4",
     "date-fns": "^2.26.0",
     "marked": "^4.0.5",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-masonry-css": "^1.0.16",
     "reason-date-fns": "^1.0.2",
+    "rescript-contentful": "^1.0.0",
     "rescript-swr": "^1.1.0",
     "sass": "1.43.5",
     "swr": "^1.0.1",
@@ -45,8 +44,11 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "autoprefixer": "^10.4.0",
     "concurrently": "^6.4.0",
+    "postcss": "^8.4.4",
     "rescript": "^9.1.4",
+    "tailwindcss": "^2.2.19",
     "typescript": "^4.5.2",
     "vite": "^2.6.14",
     "vite-react-jsx": "^1.1.2"
