promise of result to just. introduced rescript-these data type

--- a/bsconfig.json
+++ b/bsconfig.json
@@ -21,6 +21,7 @@
     "@ryyppy/rescript-promise",
     "reason-date-fns",
     "rescript-swr",
-    "rescript-contentful"
+    "rescript-contentful",
+    "rescript-these"
   ]
 }
