--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.6.2",
+    "@contentful/rich-text-react-renderer": "^15.10.1",
     "@rescript/react": "^0.10.3",
     "@ryyppy/rescript-promise": "^2.1.0",
-    "contentful": "^9.1.4",
-    "date-fns": "^2.26.0",
-    "marked": "^4.0.5",
+    "contentful": "^9.1.5",
+    "date-fns": "^2.27.0",
+    "marked": "^4.0.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
@@ -17,8 +17,7 @@
     "rescript-contentful": "^1.0.0",
     "rescript-swr": "^2.0.0",
     "rescript-these": "^1.0.0",
-    "sass": "1.44.0",
-    "swr": "^1.0.1",
+    "swr": "^1.1.1",
     "typeface-fira-sans": "^1.1.13",
     "typeface-roboto-slab": "^1.1.13"
   },
@@ -29,7 +28,7 @@
     "re:build": "rescript",
     "re:dev": "rescript build -w",
     "re:clean": "rescript clean",
-    "dev": "concurrently \"npm:*:dev\""
+    "dev": "concurrently --names \"dev:\" \"npm:*:dev\""
   },
   "browserslist": {
     "production": [
@@ -44,14 +43,12 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "@vitejs/plugin-react": "^1.1.3",
     "autoprefixer": "^10.4.0",
-    "concurrently": "^6.4.0",
-    "postcss": "^8.4.4",
+    "concurrently": "^6.5.1",
+    "postcss": "^8.4.5",
     "rescript": "^9.1.4",
-    "tailwindcss": "^2.2.19",
-    "typescript": "^4.5.2",
-    "vite": "^2.6.14",
-    "vite-react-jsx": "^1.1.2"
+    "tailwindcss": "^3.0.7",
+    "vite": "^2.7.7"
   }
 }
