--- a/package.json
+++ b/package.json
@@ -3,23 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.12.1",
-    "@rescript/react": "^0.10.3",
-    "@ryyppy/rescript-promise": "^2.1.0",
-    "contentful": "^9.1.33",
-    "date-fns": "^2.29.1",
-    "marked": "^4.0.18",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.4.0",
+    "@contentful/rich-text-react-renderer": "^15.22.9",
+    "@fontsource/fira-sans": "^5.0.20",
+    "@fontsource/roboto-slab": "^5.0.20",
+    "@rescript/core": "^1.5.2",
+    "@rescript/react": "^0.13.0",
+    "contentful": "^10.13.1",
+    "marked": "^13.0.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-masonry-css": "^1.0.16",
-    "reason-date-fns": "^1.0.2",
-    "rescript-contentful": "^1.0.1",
-    "rescript-swr": "^2.0.0",
+    "rescript-contentful": "^3.0.0",
+    "rescript-swr": "^3.0.0-beta.4",
     "rescript-these": "^1.1.0",
-    "swr": "^1.3.0",
-    "typeface-fira-sans": "^1.1.13",
-    "typeface-roboto-slab": "^1.1.13"
+    "swr": "^2.2.5"
   },
   "scripts": {
     "vite:build": "vite build",
@@ -43,12 +41,12 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^2.0.0",
-    "autoprefixer": "^10.4.7",
-    "concurrently": "^7.3.0",
-    "postcss": "^8.4.14",
-    "rescript": "^9.1.4",
-    "tailwindcss": "^3.1.6",
-    "vite": "^3.0.3"
+    "@vitejs/plugin-react": "^4.3.1",
+    "autoprefixer": "^10.4.19",
+    "concurrently": "^8.2.2",
+    "postcss": "^8.4.40",
+    "rescript": "^11.1.3",
+    "tailwindcss": "^3.4.7",
+    "vite": "^5.3.5"
   }
 }
