--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@contentful/rich-text-react-renderer": "^15.22.9",
-    "@fontsource/fira-sans": "^5.0.20",
-    "@fontsource/roboto-slab": "^5.0.20",
-    "@rescript/core": "^1.5.2",
-    "@rescript/react": "^0.13.0",
-    "contentful": "^10.13.1",
-    "marked": "^13.0.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1",
+    "@contentful/rich-text-react-renderer": "^16.0.1",
+    "@fontsource/fira-sans": "^5.2.5",
+    "@fontsource/roboto-slab": "^5.2.5",
+    "@rescript/core": "^1.6.1",
+    "@rescript/react": "^0.13.1",
+    "contentful": "^11.5.11",
+    "marked": "^15.0.7",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
     "rescript-contentful": "^3.0.0",
     "rescript-swr": "^3.0.0-beta.4",
     "rescript-these": "^1.1.0",
-    "swr": "^2.2.5"
+    "swr": "^2.3.3"
   },
   "scripts": {
     "vite:build": "vite build",
@@ -41,12 +41,12 @@
     ]
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.19",
-    "concurrently": "^8.2.2",
-    "postcss": "^8.4.40",
-    "rescript": "^11.1.3",
-    "tailwindcss": "^3.4.7",
-    "vite": "^5.3.5"
+    "@tailwindcss/postcss": "^4.0.17",
+    "@vitejs/plugin-react": "^4.3.4",
+    "concurrently": "^9.1.2",
+    "postcss": "^8.5.3",
+    "rescript": "^11.1.4",
+    "tailwindcss": "^4.0.17",
+    "vite": "^6.2.3"
   }
 }
